[gd_scene load_steps=46 format=3 uid="uid://bx16578vw56xp"]

[ext_resource type="PackedScene" uid="uid://bo281n700jdc8" path="res://scenes/unicycle.tscn" id="1_uxhwy"]
[ext_resource type="Texture2D" uid="uid://dkk2eg6q0y3mk" path="res://assets/grass.jpg" id="2_3hh0y"]
[ext_resource type="Texture2D" uid="uid://bsvx77kaxwufq" path="res://assets/RaceTracksKit/Textures/StartFinishFlags.png" id="2_fgp86"]
[ext_resource type="ArrayMesh" uid="uid://bboxsogomum8x" path="res://assets/RaceTracksKit/FBX/OBJ/BeginFlag.obj" id="2_ndicr"]
[ext_resource type="ArrayMesh" uid="uid://ccow08shlp0ue" path="res://assets/RaceTracksKit/FBX/OBJ/BeginTrack01.obj" id="4_3t7sn"]
[ext_resource type="ArrayMesh" uid="uid://51a5ae1bd0yv" path="res://assets/RaceTracksKit/FBX/OBJ/CurvedTrack01.obj" id="5_soh1n"]
[ext_resource type="ArrayMesh" uid="uid://t2b0keeboic2" path="res://assets/RaceTracksKit/FBX/OBJ/StraightTrack01.obj" id="6_ms015"]
[ext_resource type="ArrayMesh" uid="uid://dwmxr8fboaaty" path="res://assets/RaceTracksKit/FBX/OBJ/CurvedTrack02.obj" id="7_o64x2"]
[ext_resource type="ArrayMesh" uid="uid://kputr5q67fh1" path="res://assets/RaceTracksKit/FBX/OBJ/C_CurvedTrack01.obj" id="8_0c25m"]
[ext_resource type="ArrayMesh" uid="uid://c30to0vsky87s" path="res://assets/RaceTracksKit/FBX/OBJ/LightPole01.obj" id="10_64g55"]
[ext_resource type="ArrayMesh" uid="uid://bbs3kcfx7fxrk" path="res://assets/RaceTracksKit/FBX/OBJ/StadiumSits2.obj" id="11_ovabt"]
[ext_resource type="ArrayMesh" uid="uid://d3jldfgbp8mt4" path="res://assets/RaceTracksKit/FBX/OBJ/Tent01.obj" id="12_qy7tg"]
[ext_resource type="Script" path="res://scripts/Waypoints.gd" id="13_1gb4t"]
[ext_resource type="PackedScene" uid="uid://docawxg05nm77" path="res://scenes/pause.tscn" id="14_u32ci"]
[ext_resource type="PackedScene" uid="uid://dk7j7kmxhphxa" path="res://scenes/win.tscn" id="15_h71k0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gn42d"]
sky_top_color = Color(0.396885, 0.631769, 0.874946, 1)
sky_horizon_color = Color(0.76863, 0.775811, 0.78715, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_a03do"]
sky_material = SubResource("ProceduralSkyMaterial_gn42d")

[sub_resource type="Environment" id="Environment_b2ks7"]
background_mode = 2
sky = SubResource("Sky_a03do")
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_light_color = Color(0.473594, 0.508385, 0.563063, 1)
fog_density = 0.4521
volumetric_fog_density = 1.354
volumetric_fog_length = 592.16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plx77"]
albedo_color = Color(0.370028, 0.680376, 0.469661, 1)
albedo_texture = ExtResource("2_3hh0y")
uv1_scale = Vector3(50, 50, 50)

[sub_resource type="PlaneMesh" id="PlaneMesh_o7qma"]
size = Vector2(500, 500)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ubhq1"]
data = PackedVector3Array(250, 0, 250, -250, 0, 250, 250, 0, -250, -250, 0, 250, -250, 0, -250, 250, 0, -250)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wvm1g"]
albedo_texture = ExtResource("2_fgp86")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cojft"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_c7e86"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ajpey"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ptc8q"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_c6vuu"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sfvmq"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sl0ol"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gwfrh"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_g67iq"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_bl7ib"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_n70ns"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_okwdb"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_vk84p"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7d1vj"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_683ny"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ifhgu"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_t5e4f"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0m5j6"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_g6x3d"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kd8ql"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_e4q2f"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hbo36"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_6vrox"]

[node name="Node3D" type="Node3D"]

[node name="Unicycle" parent="." groups=["player"] instance=ExtResource("1_uxhwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 1.72711, 0)
collision_layer = 3
collision_mask = 3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b2ks7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38419e-07, 0)
material_override = SubResource("StandardMaterial3D_plx77")
mesh = SubResource("PlaneMesh_o7qma")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ubhq1")

[node name="Racetrack" type="Node3D" parent="."]

[node name="BeginFlag" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-2.59646e-08, 0, 0.594, 0, 0.594, 0, -0.594, 0, -2.59646e-08, -15.7347, 5.17899, 18.78)
material_override = SubResource("StandardMaterial3D_wvm1g")
mesh = ExtResource("2_ndicr")
skeleton = NodePath("../..")

[node name="BeginTrack01" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, -0.88, 0, 0.88, 0, 0.88, 0, -3.8466e-08, -16.2068, 0.295255, 3.97237)
mesh = ExtResource("4_3t7sn")
skeleton = NodePath("../..")

[node name="BeginTrack02" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, -0.88, 0, 0.88, 0, 0.88, 0, -3.8466e-08, -16.2068, 0.295255, 27.5168)
mesh = ExtResource("4_3t7sn")
skeleton = NodePath("../..")

[node name="CurvedTrack01" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.81544e-08, 0, 0.872872, 0, 0.872872, 0, -0.872872, 0, -3.81544e-08, -7.38263, 0.295255, 64.7782)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="CurvedTrack02" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.81544e-08, 0, 0.872872, 0, 0.872872, 0, -0.872872, 0, -3.81544e-08, -7.38263, 0.295255, 64.7782)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="CurvedTrack04" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, -0.88, 0, 0.88, 0, 0.88, 0, -3.8466e-08, 11.0874, 0.362227, -82.6218)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="CurvedTrack05" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, -0.88, 0, 0.88, 0, 0.88, 0, -3.8466e-08, -25.129, 0.295255, -32.0218)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="CurvedTrack06" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(6.64382e-08, 0, 0.88, 0, 0.88, 0, -0.88, 0, 6.64382e-08, -77.9289, 0.295255, -47.4218)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="CurvedTrack07" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(0.88, 0, -1.53864e-07, 0, 0.88, 0, 1.53864e-07, 0, 0.88, -79.4236, 0.295255, -80.9509)
mesh = ExtResource("5_soh1n")
skeleton = NodePath("../..")

[node name="StraightTrack01" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(0.88, 0, 0, 0, 0.88, 0, 0, 0, 0.871587, 30.9591, 0.37562, 72.1519)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack03" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.96713e-08, 0, 0.88, 0, 0.88, 0, -0.907574, 0, -3.8466e-08, 114.871, 0.378295, 22.5403)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack04" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, 0.88, 0, 0.88, 0, -0.88, 0, -3.8466e-08, 114.871, 0.422626, 0.411671)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack05" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, 0.870177, 0, 0.88, 0, -0.88, 0, -3.80366e-08, 19.8665, 0.422626, -23.5313)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack06" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, 0.88, 0, 0.88, 0, -0.88, 0, -3.8466e-08, 19.9478, 0.422626, -45.5313)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack07" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(0.88, 0, 0, 0, 0.88, 0, 0, 0, 0.88, -24.0522, 0.422626, -90.2001)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack08" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(0.88, 0, 0, 0, 0.88, 0, 0, 0, 0.88, -43.8522, 0.422626, -90.2001)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="StraightTrack02" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(0.88, 0, 0, 0, 0.88, 0, 0, 0, 0.872059, 54.4801, 0.422626, 72.1675)
mesh = ExtResource("6_ms015")
skeleton = NodePath("../..")

[node name="CurvedTrack03" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.80429e-08, 0, 0.877829, 0, 0.877829, 0, -0.870321, 0, -3.83711e-08, 99.593, 0.398149, 63.3103)
mesh = ExtResource("7_o64x2")
skeleton = NodePath("../..")

[node name="CCurvedTrack01" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, -0.879487, 0, 0.880255, 0, 0.88, 0, -3.84436e-08, 91.1505, 0.374559, -33.4276)
mesh = ExtResource("8_0c25m")
skeleton = NodePath("../..")

[node name="CCurvedTrack02" type="MeshInstance3D" parent="Racetrack"]
transform = Transform3D(-3.8466e-08, 0, 0.877615, 0, 0.88, 0, -0.88, 0, -3.83617e-08, 43.647, 0.295255, 11.3704)
mesh = ExtResource("8_0c25m")
skeleton = NodePath("../..")

[node name="Structures" type="Node3D" parent="."]
transform = Transform3D(-0.6, 0, -5.24537e-08, 0, 0.6, 0, 5.24537e-08, 0, -0.6, 48.9611, 17.4194, -7.03412)

[node name="LightPole01" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, 0)
mesh = ExtResource("10_64g55")
skeleton = NodePath("../..")

[node name="LightPole02" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 125, 0, -143.333)
mesh = ExtResource("10_64g55")
skeleton = NodePath("../..")

[node name="LightPole03" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(-1.19182e-08, 0, 1, 0, 1, 0, -1, 0, -1.19182e-08, 271.667, 0, 98.3333)
mesh = ExtResource("10_64g55")
skeleton = NodePath("../..")

[node name="StadiumSits2" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(-1.53333, 0, 1.34048e-07, 0, 1.53333, 0, -1.34048e-07, 0, -1.53333, -6.73148, -20.699, -175.057)
mesh = ExtResource("11_ovabt")
skeleton = NodePath("../..")

[node name="StadiumSits3" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(2.01073e-07, 0, 1.53333, 0, 1.53333, 0, -1.53333, 0, 2.01073e-07, 161.602, -20.699, -41.7235)
mesh = ExtResource("11_ovabt")
skeleton = NodePath("../..")

[node name="StadiumSits4" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(2.01073e-07, 0, 1.53333, 0, 1.53333, 0, -1.53333, 0, 2.01073e-07, 271.602, -20.699, 94.9431)
mesh = ExtResource("11_ovabt")
skeleton = NodePath("../..")

[node name="StadiumSits5" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(1.53333, 0, -1.83719e-07, 0, 1.53333, 0, 1.83719e-07, 0, 1.53333, -71.7315, -20.699, 106.61)
mesh = ExtResource("11_ovabt")
skeleton = NodePath("../..")

[node name="Tent01" type="MeshInstance3D" parent="Structures"]
transform = Transform3D(-1.2, 0, 1.04907e-07, 0, 1.2, 0, -1.04907e-07, 0, -1.2, -61.7315, -29.0323, -80.0569)
mesh = ExtResource("12_qy7tg")
skeleton = NodePath("../..")

[node name="Boundaries" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-3.66809e-06, 0, 167.454, 0, 36.4954, 0, -83.9161, 0, -7.31963e-06, 102.733, 0, 13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cojft")

[node name="StaticBody3D2" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(105.734, 0, 0, 0, 36.4954, 0, 0, 0, 167.454, 46.7329, 0, 60)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D2"]
shape = SubResource("ConcavePolygonShape3D_c7e86")

[node name="StaticBody3D3" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-4.62179e-06, 0, -167.454, 0, 36.4954, 0, 105.734, 0, -7.31963e-06, -4.26712, 0, 8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D3"]
shape = SubResource("ConcavePolygonShape3D_ajpey")

[node name="StaticBody3D4" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(84.5874, 0, -9.09495e-13, 0, 36.4954, 0, -3.63798e-13, 0, 167.454, -34.2671, 0, -52)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D4"]
shape = SubResource("ConcavePolygonShape3D_ptc8q")

[node name="StaticBody3D5" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-1.33108e-06, 0, -167.454, 0, 36.4954, 0, 30.4515, 0, -7.31963e-06, -76.2671, 0, -65)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D5"]
shape = SubResource("ConcavePolygonShape3D_c6vuu")

[node name="StaticBody3D6" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-85.2641, 0, 1.46393e-05, 0, 36.4954, 0, -7.45402e-06, 0, -167.454, -33.2671, 0, -80)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D6"]
shape = SubResource("ConcavePolygonShape3D_sfvmq")

[node name="StaticBody3D7" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(1.4882e-05, 0, 167.454, 0, 36.4954, 0, -113.487, 0, 2.19589e-05, 8.73288, 0, -22)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D7"]
shape = SubResource("ConcavePolygonShape3D_sl0ol")

[node name="StaticBody3D8" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-81.7103, 0, 1.46393e-05, 0, 36.4954, 0, -7.14334e-06, 0, -167.454, 46.7329, 0, 37)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D8"]
shape = SubResource("ConcavePolygonShape3D_gwfrh")

[node name="StaticBody3D9" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(1.0715e-05, 0, 167.454, 0, 36.4954, 0, -81.7103, 0, 2.19589e-05, 79.7329, 0, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D9"]
shape = SubResource("ConcavePolygonShape3D_g67iq")

[node name="StaticBody3D10" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-24.5131, 0, 1.46393e-05, 0, 36.4954, 0, -2.143e-06, 0, -167.454, 90.7329, 0, -31)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D10"]
shape = SubResource("ConcavePolygonShape3D_bl7ib")

[node name="StaticBody3D11" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-5.35751e-06, 0, -167.454, 0, 36.4954, 0, 24.5131, 0, -3.65982e-05, 99.7329, 0, -24)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D11"]
shape = SubResource("ConcavePolygonShape3D_n70ns")

[node name="StaticBody3D12" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-3.13521e-05, 0, -167.454, 0, 36.4954, 0, 143.451, 0, -3.65981e-05, 127.733, 0, 13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D12"]
shape = SubResource("ConcavePolygonShape3D_okwdb")

[node name="StaticBody3D13" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-172.141, 0, 4.39178e-05, 0, 36.4954, 0, -4.51471e-05, 0, -167.454, 50.7329, 0, 84)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D13"]
shape = SubResource("ConcavePolygonShape3D_vk84p")

[node name="StaticBody3D14" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(2.25735e-05, 0, 167.454, 0, 36.4954, 0, -172.141, 0, 2.19589e-05, -29.2671, 0, 58)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D14"]
shape = SubResource("ConcavePolygonShape3D_7d1vj")

[node name="StaticBody3D15" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-82.6276, 0, 4.39178e-05, 0, 36.4954, 0, -2.16706e-05, 0, -167.454, -68.2671, 0, -28)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D15"]
shape = SubResource("ConcavePolygonShape3D_683ny")

[node name="StaticBody3D16" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(2.52823e-05, 0, 167.453, 0, 36.4954, 0, -82.6275, 0, 5.12374e-05, -99.2671, 0, -65)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D16"]
shape = SubResource("ConcavePolygonShape3D_ifhgu")

[node name="StaticBody3D17" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(132.204, 0, -5.8557e-05, 0, 36.4954, 0, 4.62306e-05, 0, 167.453, -33.2671, 0, -102)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D17"]
shape = SubResource("ConcavePolygonShape3D_t5e4f")

[node name="StaticBody3D18" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(-5.20094e-05, 0, -167.453, 0, 36.4954, 0, 132.204, 0, -6.58766e-05, 32.7329, 0, -61)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D18"]
shape = SubResource("ConcavePolygonShape3D_0m5j6")

[node name="StaticBody3D19" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(26.4408, 0, -5.8557e-05, 0, 36.4954, 0, 9.24611e-06, 0, 167.453, 43.7329, 0, 7)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D19"]
shape = SubResource("ConcavePolygonShape3D_g6x3d")

[node name="StaticBody3D20" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(2.10349e-05, 0, 167.453, 0, 36.4954, 0, -68.7461, 0, 5.12373e-05, 54.7329, 0, -25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D20"]
shape = SubResource("ConcavePolygonShape3D_kd8ql")

[node name="StaticBody3D21" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(68.7461, 0, -8.78354e-05, 0, 36.4954, 0, 3.60599e-05, 0, 167.453, 91.7329, 0, -58)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D21"]
shape = SubResource("ConcavePolygonShape3D_e4q2f")

[node name="StaticBody3D22" type="StaticBody3D" parent="Boundaries"]
transform = Transform3D(3.30549e-05, 0, 167.453, 0, 36.4954, 0, -68.7461, 0, 8.05158e-05, 128.733, 0, -22)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D22"]
shape = SubResource("ConcavePolygonShape3D_hbo36")

[node name="Waypoints" type="Node3D" parent="."]
script = ExtResource("13_1gb4t")

[node name="Waypoint1" type="Area3D" parent="Waypoints"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -16, 0, 52)
collision_layer = 2
collision_mask = 2

[node name="Waypoint1" type="CollisionShape3D" parent="Waypoints/Waypoint1"]
shape = SubResource("BoxShape3D_6vrox")

[node name="Waypoint2" type="Area3D" parent="Waypoints"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 114, 0, 24)
collision_mask = 2

[node name="Waypoint2" type="CollisionShape3D" parent="Waypoints/Waypoint2"]
shape = SubResource("BoxShape3D_6vrox")

[node name="Waypoint3" type="Area3D" parent="Waypoints"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 19, 0, -40)
collision_mask = 2

[node name="Waypoint3" type="CollisionShape3D" parent="Waypoints/Waypoint3"]
shape = SubResource("BoxShape3D_6vrox")

[node name="Waypoint4" type="Area3D" parent="Waypoints"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -17, 0, 29)
collision_mask = 2

[node name="Waypoint4" type="CollisionShape3D" parent="Waypoints/Waypoint4"]
shape = SubResource("BoxShape3D_6vrox")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource("14_u32ci")]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Win" parent="." instance=ExtResource("15_h71k0")]
